--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Planckian srl | Quantum Systems</title>
   <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="Planckian srl develops next-generation scalable quantum computing architectures and open-source quantum control software." />
+  <meta name="description" content="Planckian srl develops next-generation scalable quantum computing architectures." />
 </head>
 <body>
   <div class="container">
@@ -20,58 +20,36 @@
         </ul>
       </nav>
     </aside>
+<main class="content">
+  <h1>Planckian srl</h1>
+  <p>
+    Planckian develops scalable quantum computing architectures based on superconducting qubits.
+    Our approach focuses on reducing control complexity while maintaining qubit performance.
+  </p>
 
-    <main class="content">
-      <h1>Planckian srl</h1>
-      <p>
-        Scaling superconducting qubits while preserving performance is one of quantum computing’s toughest challenges.
-      </p>
-      <p>
-        We go beyond traditional brute-force scaling by decoupling control from qubit count, enabling quantum computers to scale efficiently by design.
-      </p>
+  <h2>Architecture</h2>
+  <p>
+    Current quantum systems rely on dedicated control lines for each qubit, increasing wiring density,
+    degrading performance, and limiting scalability. 
+    Planckian’s architecture employs shared control lines, minimizing hardware overhead and improving scalability.
+  </p>
 
-      <h2>A Radical Approach to Scalability</h2>
-      <p>
-        Today’s quantum computers rely on dedicated control lines for each qubit, resulting in dense wiring that degrades qubit performance, inflates system footprint and cost, and fundamentally limits scalability.
-      </p>
-      <p>
-        Most solutions to wiring problems demand new hardware and nontrivial engineering, making scalability harder, not easier.
-      </p>
-      <p>
-        We’re charting a new path.
-      </p>
-      <p>
-        Our unique chip architecture uses shared control lines, drastically reducing wiring complexity while sidestepping the limits of conventional designs.
-      </p>
-      <p>
-        This approach enables a new generation of quantum computing systems — built on the most advanced qubit platforms and designed to scale from day one.
-      </p>
+  <h2>Control Protocol</h2>
+  <p>
+    Our control protocol enables simultaneous addressing of qubits through global signals.
+    Engineered qubit couplings allow selective operations and data movement across the chip,
+    simplifying control and improving efficiency.
+  </p>
 
-      <h2>Powered by a New Way to Compute</h2>
-      <p>
-        At the heart of our innovation lies a new control protocol — a new way to address and operate a qubit.
-      </p>
-      <p>
-        Unlike traditional processors, in our chip all qubits are addressed simultaneously.
-      </p>
-      <p>
-        Through innovative engineering of qubit couplings, we exploit these globally broadcasted signals to selectively perform gate operations and move quantum information within the chip.
-      </p>
-      <p>
-        We rethink information processing from first principles to increase hardware efficiency and fast-track the path to scalable, error-corrected, application-ready quantum computers.
-      </p>
+  <section class="projects">
+    <h2>Open Software</h2>
+    <p>
+      This page hosts open-source software developed by Planckian in support of our research in scalable quantum and global control and computation.
+      Source code and documentation is available at 
+      <a href="https://github.com/planckianq" target="_blank">GitHub</a>.
+    </p>
+  </section>
 
-      <section class="projects">
-        <h2>Open Software at Planckian</h2>
-        <p>
-          We believe that advancing quantum technologies requires openness and collaboration.
-          Here we publish and maintain open-source software developed by Planckian — tools, simulators, and frameworks designed to accelerate progress in quantum control and computation.
-        </p>
-        <p>
-          Explore our public repositories on
-          <a href="https://github.com/planckianq" target="_blank">GitHub</a>.
-        </p>
-      </section>
 
       <section id="contact">
         <h2>Contact</h2>
@@ -82,7 +60,14 @@
           <a href="mailto:hello@planckian.com">hello@planckian.com</a>.
         </p>
       </section>
+  
+</main>
+
+
+
+
     </main>
   </div>
 </body>
 </html>
+
