--- a/docs.html
+++ b/docs.html
@@ -13,15 +13,24 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://github.com/planckian" target="_blank">GitHub Projects</a></li>
+          <li><a href="https://github.com/planckianq" target="_blank">GitHub Projects</a></li>
         </ul>
       </nav>
     </aside>
 
     <main class="content">
       <h1>Documentation</h1>
-      <p>Welcome to Planckian's documentation page. Add your project guides and technical documentation here.</p>
+      <p>Welcome to Planckian's documentation page. We will add technical documentation on this page.</p>
     </main>
   </div>
+
+      <nav>
+        <ul>
+          <li><a href="planckianq.github.io" target="_blank">Back to home</a></li>
+
+        </ul>
+      </nav>
+  
 </body>
 </html>
+
