--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="logo.png" alt="Planckian Logo" class="logo" />
       <nav>
         <ul>
-          <li><a href="https://www.planckian.com" target="_blank">Main Website</a></li>
+          <li><a href="https://www.planckian.co" target="_blank">Main Website</a></li>
           <li><a href="docs.html">Documentation</a></li>
           <li><a href="https://github.com/planckianq" target="_blank">GitHub Projects</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -70,4 +70,5 @@
   </div>
 </body>
 </html>
+
 
