--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planckian srl | Quantum Systems</title>
+  <title>Planckian | Quantum Systems</title>
   <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="Planckian srl develops next-generation scalable quantum computing architectures." />
+  <meta name="description" content="Planckian develops next-generation scalable quantum computing architectures." />
 </head>
 <body>
   <div class="container">
@@ -21,7 +21,7 @@
       </nav>
     </aside>
 <main class="content">
-  <h1>Planckian srl</h1>
+  <h1>Planckian</h1>
   <p>
     Planckian develops scalable quantum computing architectures based on superconducting qubits.
     Our approach focuses on reducing control complexity while maintaining qubit performance.
